# humanizer

./: .gitignore  README.md  pyproject.toml
docs/: dependency-license-tracker.md  development-standards.md  multimodal-workflow-plan.md  project-plan.md  smoke-test-automation.md  textguard-rewrite-architecture.md  uat-plan.md
src/: app.py
src/humanizer/: __init__.py  cli.py  commands.py  input_loading.py
src/humanizer/analysis/: profiles.py  service.py
src/humanizer/api/: app.py  routes_analyze.py  routes_providers.py  routes_system.py  schemas.py
src/humanizer/core/: errors.py  logging_utils.py  settings.py  token_usage.py
src/humanizer/providers/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  grok_adapter.py  heuristic_adapter.py  json_utils.py  openai_adapter.py  perplexity_adapter.py  registry.py
testdoc/: kurtz.md
testdocs/: DeepSpaceAI.md  ET_AI_technical_governance_model.md  ExtraterrestrialAI.md  PopcornMachineManual.md  Sub-QuantumVernierCalibration.md  catepillardrive.md  duty.md  greenwald.txt  monroedoctrine.md  starlink.md  tongo_rulebook.docx
tests/: conftest.py  test_analysis_service.py  test_api.py  test_cli.py  test_commands.py  test_input_loading.py  test_provider_json_utils.py  test_schemas.py  test_settings.py  test_token_usage.py
